DigicielFull/force-app/main/default/objects/BAN__c/BAN__c.object-meta.xml
<CustomObject>
    <label>BAN</label>
    <nameField>
        <label>BAN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BANs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>