DigicielFull/force-app/main/default/objects/BAN__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <externalId>true</externalId>
    <label>Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>