DigicielFull/force-app/main/default/objects/BAN__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>BANs</relationshipLabel>
    <relationshipName>BANs</relationshipName>
    <type>Lookup</type>
</CustomField>