DigicielFull/force-app/main/default/objects/BAN__c/fields/of_BAN_s__c.field-meta.xml
<CustomField>
    <fullName>of_BAN_s__c</fullName>
    <businessOwnerGroup>SFDC_Admin_Team</businessOwnerGroup>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of BAN&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>