DigicielFull/force-app/main/default/objects/BAN__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Warned</fullName>
            </value>
            <value>
                <fullName>Promise To Pay</fullName>
            </value>
            <value>
                <fullName>Dunned</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>In Arrears</fullName>
            </value>
            <value>
                <fullName>In Collection</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>